2010-11-04  Robert Larice
 * src/frontend/help/x11disp.c ,
 * src/frontend/plotting/x11.c :
    add casts for x11 operations, to silence type conversion warnings

2010-11-04  Robert Larice
 * src/frontend/plotting/x11.c ,
 * src/include/graph.h :
    move device dependent colors[] array from `graph' to the x11 specific struct

2010-11-04  Robert Larice
 * src/frontend/com_compose.c ,
 * src/frontend/postcoms.c ,
 * src/misc/util.c :
    minor rewrites
      in postcoms.c, drop an overwritten |= VF_PERMANENT assignment

2010-11-04  Robert Larice
 * src/main.c ,
 * src/ngsconvert.c ,
 * src/frontend/aspice.c ,
 * src/frontend/inp.c ,
 * src/frontend/nutinp.c :
    use `size_t' variables for fread/fwrite operations

2010-11-02  Robert Larice
 * src/frontend/numparam/general.h ,
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/numparam.h ,
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c :
    use the type `bool' instead of `unsigned char' in the numparam world
      bool currently is `unsigned char', plan to change to `int' for better
      type comaptibility with `C' boolean expressions

2010-11-02  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/parser/lexical.c ,
 * src/frontend/quote.c ,
 * src/frontend/subckt.c ,
 * src/main.c ,
 * src/spicelib/parser/inpcfix.c ,
 * src/xspice/cmpp/pp_lst.c ,
 * src/xspice/cmpp/util.c ,
 * src/xspice/icm/digital/d_source/cfunc.mod ,
 * src/xspice/icm/digital/d_state/cfunc.mod ,
 * src/xspice/ipc/ipctiein.c :
    casts, to make int <-> char conversions explicit

2010-11-02  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/numparam/mystring.c :
    add some more `int' versus `size_t' casts

2010-11-02  Robert Larice
 * src/frontend/outitf.c ,
 * src/spicelib/parser/inp2r.c :
    minor beautification

2010-11-02  Robert Larice
 * src/ciderlib/input/cards.c ,
 * src/frontend/cpitf.c ,
 * src/frontend/dotcards.c ,
 * src/frontend/plotting/grid.c ,
 * src/ngspice.c ,