@@ -1,4 +1,10 @@
 2010-11-04  Robert Larice
+ * src/frontend/plotting/x11.c :
+    minor rewrite, fix a minor bug in the x11 zoom-in function
+      the rectangle was not always drawn correct,
+      when draging the mouse in all directions.
+
+2010-11-04  Robert Larice
  * src/frontend/help/x11disp.c ,
  * src/frontend/plotting/x11.c :
     add casts for x11 operations, to silence type conversion warnings
